Исправила недочеты, а также создала отдельный пакет для подзадачи