@@ -1,6 +1,5 @@
-package school.faang;
+package school.faang.BJS2_56414;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -9,10 +8,10 @@ public class Main {
         User firstUser = new User("Vladimir", 25, "Google", "Amsterdam");
         User secondUser = new User("Elena", 32, "Ozon", "Moscow");
         User thirdUser = new User("Sergei", 32, "Uber", "New York");
-        User foursUser = new User("Veronika", 27, "Spotify", "Seoul");
+        User fourthUser = new User("Veronika", 27, "Spotify", "Seoul");
 
-        List<User> allUsers = Arrays.asList(firstUser, secondUser, thirdUser, foursUser);
-        Map<Integer, List<User>> groupUsers = User.groupUsers(allUsers);
-        System.out.println(groupUsers);
+        List<User> allUsers = List.of(firstUser, secondUser, thirdUser, fourthUser);
+        Map<Integer, List<User>> usersByAge = User.groupUsers(allUsers);
+        System.out.println(usersByAge);
     }
 }
